- The pre-ingest files are now schema validated in order to make debugging easier. - Made the XML parser namespace aware when parsing PBCore metadata. However, I added a heap of hard-coded uglyness in the process - so I'll be back.